cleaned up dlopen sample for MemorySession unsage in lookup